@@ -47,7 +47,7 @@ echo "## Config file for DataSpaces
 ndim = 3
 dims = 500, 500, 500
 max_versions = 100
-max_readers = 100
+max_readers = 10
 lock_type = 2
 " > dataspaces.conf
 
